Sharkos are fixed now apparently. Next up: Mobs and some code because like I said "IntelliJ somehow merged my workspace with All About Engie".